# Vehicle-Insurance-predictor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  credentials.json  demo.py  main.py  pyproject.toml  render-run.yaml  requirements.txt  setup.py  steps.txt  temp.pkl  token.json
.github/workflows/: render.yaml
RandomForestClassifier/: model.pkl
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/cloud_storage/: googledrive_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: googledrive_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  drive_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
templates/: vehicledata.html
