[project]
name = "vehicle-insurance-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "botocore>=1.40.69",
    "certifi>=2025.10.5",
    "dill>=0.4.0",
    "fastapi>=0.121.1",
    "from-root>=1.3.0",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pymongo>=4.15.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]
